GUI/envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains: ["*"]
                    routes:
                      - match: { prefix: "/" }
                        route:
                          cluster: greeter_service
                          max_stream_duration:
                            grpc_timeout_header_max: 0s
                        typed_per_filter_config:
                          envoy.filters.http.cors:
                            "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                            allow_origin_string_match:
                              - prefix: "*"
                            allow_methods: "GET,PUT,DELETE,POST,OPTIONS"
                            allow_headers: "keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout"
                            expose_headers: "custom-header-1,grpc-status,grpc-message"
                            max_age: "1728000"
                            allow_credentials: true
                            allow_private_network_access: true
              http_filters:
                - name: envoy.filters.http.grpc_web
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                - name: envoy.filters.http.cors
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                - name: envoy.filters.http.compressor
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
                    compressor_library:
                      name: text_optimized
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
                        compression_level: BEST_SPEED
                        compression_strategy: DEFAULT_STRATEGY
                        memory_level: 8
                        window_bits: 15
                        chunk_size: 4096
                    response_direction_config:
                      remove_accept_encoding_header: true
                      common_config:
                        enabled:
                          default_value: true
                          runtime_key: response_direction_config_enabled
                        content_type:
                          - application/hal+json
                          - application/atom+xml
                          - application/javascript
                          - application/x-javascript
                          - application/json
                          - application/rss+xml
                          - application/vnd.ms-fontobject
                          - application/x-font-ttf
                          - application/x-web-app-manifest+json
                          - application/xhtml+xml
                          - application/xml
                          - font/opentype
                          - image/svg+xml
                          - image/x-icon
                          - text/css
                          - text/html
                          - text/plain
                          - text/xml
                          - text/x-component
                        min_content_length: 860
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: greeter_service
      connect_timeout: 0.25s
      type: logical_dns
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: cluster_0
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 0.0.0.0
                    port_value: 9090
